compiler/tools/fpp-check/test/constant/undef_2.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/constant/undef_2.fpp:1.14
constant b = M.a
             ^
error: cannot find constant `M` in this scope
